--- a/source/layouts/post.html.slim
+++ b/source/layouts/post.html.slim
@@ -3,5 +3,5 @@
   .container.mx-auto.p-4
     article.w-full.mx-auto class="md:w-2/4"
       header
-        h2.text-2xl.font-mono.mt-6 = current_page.title
+        h2.text-2xl.font-mono.mt-6 = current_page.data.title
       == yield
