--- a/source/croatie/index.html.slim
+++ b/source/croatie/index.html.slim
@@ -2,4 +2,5 @@
 layout: trip
 trip: Croisière en Croatie
 trip_slug: croatie
+main_image: https://res.cloudinary.com/dsapqckal/image/upload/croatie/20190825_110157_dcurbl.jpg
 ---
