--- a/source/layouts/post.html.slim
+++ b/source/layouts/post.html.slim
@@ -1,7 +1,25 @@
 = wrap_layout :layout do
+  picture
+    = image_tag current_page.data.top_image, class: 'object-cover'
+
   h1.text-center.text-4xl = current_page.data.trip
   .container.mx-auto.p-4
+
     article.w-full.mx-auto class="md:w-2/4"
-      header
-        h2.text-2xl.font-mono.mt-6 = current_page.data.title
+      header.mt-6
+        .flex.justify-between.items-center.mb-4.flex-wrap
+          - if current_page.article_previous && current_page.article_previous.data.trip == current_page.data.trip && !current_page.article_previous.data.draft
+            = link_to "👈 #{current_page.article_previous.title}", current_page.article_previous.url, class: "text-blue-600 flex-grow"
+
+          - if current_page.article_next && current_page.article_next.data.trip == current_page.data.trip && !current_page.article_next.data.draft
+            = link_to "#{current_page.article_next.title} 👉", current_page.article_next.url, class: "text-blue-600 flex-grow text-right"
+
+        h2.text-2xl.font-mono.text-center.mt-4 = current_page.data.title
       == yield
+
+      footer.flex.justify-between.items-center.mb-4.mt-6.flex-wrap
+        - if current_page.article_previous && current_page.article_previous.data.trip == current_page.data.trip && !current_page.article_previous.data.draft
+          = link_to "👈 #{current_page.article_previous.title}", current_page.article_previous.url, class: "text-blue-600 flex-grow"
+
+        - if current_page.article_next && current_page.article_next.data.trip == current_page.data.trip && !current_page.article_next.data.draft
+          = link_to "#{current_page.article_next.title} 👉", current_page.article_next.url, class: "text-blue-600 flex-grow text-right"
