--- a/source/trip.html.slim
+++ b/source/trip.html.slim
@@ -1,13 +1,18 @@
 - articles = blog.articles.reject { |article| article.data.draft }.select { |article| article.data.trip_slug == current_page.data.trip_slug }.sort_by(&:date)
 = wrap_layout :layout do
-  picture
-    = image_tag 'https://res.cloudinary.com/dsapqckal/image/upload/croatie/20190825_110157_dcurbl.jpg', class: 'object-cover'
+  picture.w-screen
+    = image_tag current_page.data.main_image, class: 'object-cover'
   
   h1.text-center.text-4xl = current_page.data.trip
 
   .container.mx-auto.p-4
-    - articles.each do |article|
+    - article = articles.first
+    - if article
       article.w-full.mx-auto class="md:w-2/4"
         header
-          h2.text-2xl.font-mono.mt-6 = article.title
+          h2.text-2xl.font-mono.text-center.mt-4 = article.title
         = article.body
+
+        footer.text-right
+          - if article.article_next && article.article_next.data.trip == article.data.trip && !article.article_next.data.draft
+            = link_to "#{article.article_next.title} 👉", article.article_next.url, class: "text-blue-600"
