--- a/source/layouts/post.html.slim
+++ b/source/layouts/post.html.slim
@@ -1,27 +1,32 @@
-- formated_yield = video_tags_for(yield)
+- yield_with_videos = video_tags_for(yield)
+- new_yield = add_non_breakable_spaces_for(yield_with_videos)
+- articles = blog.articles.select { |article| article.data.trip_slug == current_page.data.trip_slug }.sort_by(&:date)
 
 = wrap_layout :layout do
   picture
     = image_tag current_page.data.top_image, class: 'object-cover'
 
   h1.text-center.text-4xl = current_page.data.trip
-  .container.mx-auto.p-4
 
-    article.w-full.mx-auto class="md:w-2/4"
-      header.mt-6
-        .flex.justify-between.items-center.mb-4.flex-wrap
+  .relative.flex
+    aside.sticky.top-0.h-screen.pt-8.justify-end.flex-grow-0 class="md:w-1/6 lg:w-1/6 hidden md:flex"
+      ul
+        - articles.each do |article|
+          li class=('font-bold' if article == current_page)
+            - if article.data.draft
+              span.text-gray-600 = article.title
+            - else
+              span = link_to article.title, article.url, class: 'text-blue-600 text-right'
+            span =< "👈" if article == current_page
+    .p-4.mx-auto class="md:w-5/6 lg:w-4/6"
+      article.container class="lg:w-4/6"
+        header.mt-6
+          h2.text-2xl.font-mono.text-center.mt-4 = current_page.data.title
+        == new_yield
+
+        footer.flex.justify-between.items-center.mb-4.mt-6.flex-wrap
           - if current_page.article_previous && current_page.article_previous.data.trip == current_page.data.trip && !current_page.article_previous.data.draft
             = link_to "👈 #{current_page.article_previous.title}", current_page.article_previous.url, class: "text-blue-600 flex-grow"
 
           - if current_page.article_next && current_page.article_next.data.trip == current_page.data.trip && !current_page.article_next.data.draft
             = link_to "#{current_page.article_next.title} 👉", current_page.article_next.url, class: "text-blue-600 flex-grow text-right"
-
-        h2.text-2xl.font-mono.text-center.mt-4 = current_page.data.title
-      == formated_yield
-
-      footer.flex.justify-between.items-center.mb-4.mt-6.flex-wrap
-        - if current_page.article_previous && current_page.article_previous.data.trip == current_page.data.trip && !current_page.article_previous.data.draft
-          = link_to "👈 #{current_page.article_previous.title}", current_page.article_previous.url, class: "text-blue-600 flex-grow"
-
-        - if current_page.article_next && current_page.article_next.data.trip == current_page.data.trip && !current_page.article_next.data.draft
-          = link_to "#{current_page.article_next.title} 👉", current_page.article_next.url, class: "text-blue-600 flex-grow text-right"
